(Site) Add z-index to header to prevent overlapping content

--- a/site/src/components/Page.scss
+++ b/site/src/components/Page.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   > header {
     position: sticky;
+    z-index: 1;
     top: 0;
     nav {
       position: absolute;
